tests/baselines/reference/nodeModulesAllowJsPackageExports(module=node20).errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
==== index.js (0 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    cjsi;
    mjsi;
    typei;
==== index.mjs (0 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    cjsi;
    mjsi;
    typei;
==== index.cjs (0 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    cjsi;
    mjsi;
    typei;
==== node_modules/inner/index.d.ts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.cts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    export { cjs };
    export { mjs };
    export { type };
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }